<resources>
    <string name="app_name">Numa Boa Terapia</string>
    <string name="name">Numa Boa</string>
    <string name="name_subtitle">Terapia</string>
    <string name="button_login">Entrar</string>
    <string name="registration_button">Cadastrar</string>
    <string name="login">Login</string>
    <string name="pasword_recovery_text">Clique no link de recuperação de senha que te enviamos por e-mail.</string>
    <string name="back_to_login">Voltar para o Login</string>
    <string name="try_again_password_recovery"><u>Não recebeu? Tente novamente.</u></string>
    <string name="psi_type">Sou psicólogo(a)</string>
    <string name="cli_type">Sou paciente</string>
    <string name="forget_password">Recuperar senha</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_texte">texte</string>
    <string name="email_string">Email</string>
    <string name="name_string">Nome Completo</string>
    <string name="phone_string">Telefone</string>
    <string name="cpf_string">Informe seu CPF</string>
    <string name="especialization">Especialização</string>
    <string name="time">Duração da sessão(em minutos)</string>
    <string name="password_string"> Senha</string>
    <string name="password_confirm_string">Confirme sua senha</string>
    <string name="wpp_link">Link do perfil do whatsapp</string>
    <string name="crp">Informe o seu CRP</string>
    <string name="anxiety">Ansiedade</string>
    <string name="personal_growth">Crescimento \nPessoal</string>
    <string name="depression">Depressão</string>
    <string name="grief">Luto</string>
    <string name="couple">Casais</string>
    <string name="eating_disorder">Transtorno \n Alimentar</string>
    <string name="sexuality">Sexualidade</string>
    <string name="other">Outro</string>
    <string name="first_step">Passo 1 de 4</string>
    <string name="first_title">Qual o motivo da sua consulta?</string>
    <string name="single">Solteiro(a)</string>
    <string name="relationship">Em um relacionamento</string>
    <string name="divorced">Divorciado(a) - \n separado(a)</string>
    <string name="widower">Viúvo(a)</string>
    <string name="dont_inform">Não desejo informar</string>
    <string name="second_step">Passo 2 de 4</string>
    <string name="second_title">Qual o seu estado civil?</string>
    <string name="third_step">Passo 3 de 4</string>
    <string name="third_title">Como você classifica a sua \n situação financeira?</string>
    <string name="excellent">Ótima</string>
    <string name="good">Boa</string>
    <string name="stable">Estável</string>
    <string name="bad">Ruim</string>
    <string name="dont_know">Não sei</string>
    <string name="fourth_step">Passo 4 de 4</string>
    <string name="fourth_title">Qual a sua renda média?</string>
    <string name="first_average">R$277,00 a R$485,00</string>
    <string name="second_average">R$485,00 a R$727,00</string>
    <string name="third_average">R$727,00 a R$1195,00</string>
    <string name="fourth_average">R$1195,00 a R$2013,00</string>
    <string name="fifth_average">R$2013,00 a R$3480,00</string>
    <string name="sixth_average">R$3480,00 a R$6564,00</string>
    <string name="last_average">Acima de R$6554,00</string>
    <string name="label_average_income_button">Começar</string>
    <string name="psi_first_step">Passo 1 de 3</string>
    <string name="psi_first_title">Quais os públicos que você \n trabalha?</string>
    <string name="psi_second_step">Passo 2 de 3</string>
    <string name="psi_second_title">Quais as suas especialidades?</string>
    <string name="psi_third_step">Passo 3 de 3</string>
    <string name="psi_third_title">Escreva um pouco mais \n sobre você</string>
    <string name="psi_confirm_specialties">Confirme as especialidades \n selecionadas</string>
    <string name="children">Crianças</string>
    <string name="teenagers">Adolescentes</string>
    <string name="adults">Adultos</string>
    <string name="elderly">Idosos</string>
    <string name="couples">Casais</string>
    <string name="next">Próximo</string>
    <string name="especialidades">Especialidades</string>
    <string name="label">Selecione até 20 especialidades</string>
    <string name="gravidez">Acompanhamento psicólogico de gravidez</string>
    <string name="adocao">Adoção de filhos</string>
    <string name="ansiedade">Ansiedade</string>
    <string name="aprendizagem">Aprendizagem</string>
    <string name="casal">Casal</string>
    <string name="casamento">Casamento</string>
    <string name="bariatrica">Cirurgia bariátrica</string>
    <string name="compulsao">Compulsões</string>
    <string name="conflitos_amorosos">Conflitos Amorosos</string>
    <string name="conflitos_lei">Conflitos com a lei</string>
    <string name="conflitos_familia">Conflitos familiares</string>
    <string name="dependencia_quimica">Dependência química</string>
    <string name="depressao">Depressão</string>
    <string name="competencia_profissional"> Desenvolvimento de competênias profissionais</string>
    <string name="desenvolvimento_pessoal">Desenvolvimento pessoal</string>
    <string name="dor">Dor</string>
    <string name="diabetes">Educação em diabetes</string>
    <string name="emagrecimento">Emagrecimento</string>
    <string name="entrevistas">Entrevistas psicológicas</string>
    <string name="estresse">Estresse</string>
    <string name="pos_trauma">Estresse pós traumático</string>
    <string name="familia">Família</string>
    <string name="fobia_social">Fobia Social</string>
    <string name="fobias">Fobias</string>
    <string name="idoso">Idoso/terceira idade</string>
    <string name="incertezas">Incertezas quanto ao futuro</string>
    <string name="maternidade">Maternidade</string>
    <string name="medos">Medos e fobias</string>
    <string name="morte">Morte e luto</string>
    <string name="obesidade">Obesidade</string>
    <string name="pais">Orientação de pais</string>
    <string name="aprendizagem_problema">Orientação para problemas de aprendizagem</string>
    <string name="orientacao_profissional">Orientação profissional</string>
    <string name="orientacao_psicologica">Orientação psicológica</string>
    <string name="Opsicopedagogica">Orientação psicopedagógica</string>
    <string name="enfermos">Pacientes enfermos</string>
    <string name="parentalidade">Parentalidade</string>
    <string name="paternidade">Paternidade</string>
    <string name="pcd">Pessoas com deficiência</string>
    <string name="planejamento_psico">Planejamento psicopedagógico</string>
    <string name="aposentadoria">Preparação para aposentadoria</string>
    <string name="perinatal">Psicologia perinatal</string>
    <string name="puerperio">Puerpério</string>
    <string name="racial">Questões raciais</string>
    <string name="cognitiva">Reabilitação cognitiva</string>
    <string name="neuro">Reabilitação Neuropsicológica</string>
    <string name="exames">Realização de exames psicológicos</string>
    <string name="relacionamentos">Relacionamentos afetivos</string>
    <string name="saude_mental">Saúde mental</string>
    <string name="selecao">Seleção de pessoal por competências</string>
    <string name="sexualidade">Sexualidade e identidade de gênero</string>
    <string name="panico">Sindrome do pânico</string>
    <string name="suicidio">Suicídio</string>
    <string name="tanatologia">Tanatologia</string>
    <string name="tdah">TDAH</string>
    <string name="testes">Testes psicológicos</string>
    <string name="toc">TOC </string>
    <string name="bipolar">Transtorno bipolar</string>
    <string name="humor">Transtorno de humor</string>
    <string name="alimentares">Transtornos alimentares</string>
    <string name="sono">Transtorno do sono</string>
    <string name="memoria">Treinamento de memória</string>
    <string name="domestica">Violência doméstica</string>
    <string name="sexual">Violência sexual</string>
    <string name="biography_psi">Biografia</string>
    <string name="biography_hint">Escreva a sua biografia para que os pacientes possam saber mais sobre você</string>
    <string name="location">Localização</string>
    <string name="estate">Estado</string>
    <string name="city">Cidade - estado</string>
    <string name="cep">Digite o seu CEP</string>
    <string name="send_cpf">Enviar CEP</string>
    <string name="in_person">Atendo presencial</string>
    <string name="online">Atendo online</string>
    <string name="signature_label">Escolha o plano ideal para você</string>
    <string name="year_value">R$ 620,00 /Ano</string>
    <string name="year_label"> Assinatura para uso do app por um ano</string>
    <string name="semester_value">R$ 280,00 /Semestre</string>
    <string name="semester_label"> Assinatura para uso do app por um semestre</string>
    <string name="mounth_value">R$ 60,00 /Mês</string>
    <string name="mounth_label"> Assinatura para uso do app por um mês</string>
    <string name="signature_button">Selecionar plano</string>
    <string name="label_card"> Dados para cobrança</string>
    <string name="card_name">Nome no cartão</string>
    <string name="card_number">Número do cartão</string>
    <string name="mounth_card">Mês de vencimento</string>
    <string name="year_card">Ano de vencimento</string>
    <string name="cvv">CVV</string>
    <string name="card_button">Adicionar cartão</string>
    <string name="signature_selected">Plano Selecionado</string>
    <string name="payment_signature">Assinar plano</string>
    <string name="schedule_section">Agende sua \n sessão</string>
    <string name="psi_seacrh">Procurar profissionais</string>
    <string name="diary_title">Diário emocional</string>
    <string name="diary_label">Você ainda não possui registro de emoções</string>
    <string name="diary_first_button">Realize o seu primeiro \n registro</string>
    <string name="diary_button_register">Registre agora</string>
    <string name="diary_register">Histórico de resgistros</string>
    <string name="loremipusum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="feelings">O que você está sentindo?\n</string>
    <string name="amor">Amor</string>
    <string name="felicidade">Felicidade</string>
    <string name="leveza">Leveza</string>
    <string name="tranquilidade">Tranquilidade</string>
    <string name="ansiedade_diary">Ansiedade</string>
    <string name="tristeza">Tristeza</string>
    <string name="cansaco">Cansaço</string>
    <string name="irritacao">Irritação</string>
    <string name="frustracao">Frustração</string>
    <string name="estresse_diary">Estresse</string>
    <string name="medo_diary">Medo</string>
    <string name="vergonha">Vergonha</string>
    <string name="diary">Qual o motivo desse\n sentimento?\n</string>
    <string name="diary_subtitle">Descreva aqui o que provocou suas emoções. O que aconteceu, onde, com quem, como seu corpo reagiu e quando?</string>
    <string name="diary_edit_text_hint">Escreva aqui o que aconteceu</string>
    <string name="diary_button">Salvar</string>
    <string name="saudacao">Olá, Amanda </string>
    <string name="email">pacienteemail@email.com</string>
    <string name="my_data">Meus dados</string>
    <string name="my_diary">Meu diário </string>
    <string name="share_data">Compartilhamento de dados</string>
    <string name="logout">Sair</string>
    <string name="my_data_title">Meus dados</string>
    <string name="cancel">Cancelar</string>
</resources>