<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".register.pacient.view.ActivityAverageIncome">

    <com.example.numaboaterapia.views.CustomView.RegisterInformationToolBar
        android:id="@+id/average_income_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/average_income_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/average_income_tool_bar"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/first_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chau_philomene_one"
            android:text="@string/first_average"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/purple"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="90dp" />

        <RadioButton
            android:id="@+id/second_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chau_philomene_one"
            android:text="@string/second_average"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/purple"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="90dp" />

        <RadioButton
            android:id="@+id/third_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chau_philomene_one"
            android:text="@string/third_average"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/purple"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="90dp" />

        <RadioButton
            android:id="@+id/fourth_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chau_philomene_one"
            android:text="@string/fourth_average"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/purple"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="90dp" />

        <RadioButton
            android:id="@+id/fifth_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chau_philomene_one"
            android:text="@string/fifth_average"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/purple"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="90dp" />

        <RadioButton
            android:id="@+id/sixth_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chau_philomene_one"
            android:text="@string/sixth_average"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/purple"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="90dp" />

        <RadioButton
            android:id="@+id/last_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chau_philomene_one"
            android:text="@string/last_average"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/purple"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="90dp" />

    </RadioGroup>

    <com.example.numaboaterapia.views.CustomView.BotaoArredondadoRoxo
        android:id="@+id/average_income_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/average_income_radio_group"
        app:layout_constraintVertical_bias="0.0"/>


</androidx.constraintlayout.widget.ConstraintLayout>