<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".appNavigation.psychologist.views.EditPsiBiography">

    <com.example.numaboaterapia.views.CustomView.RegisterInformationToolBar
        android:id="@+id/edit_biography_psi_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/edit_biography_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:id="@+id/edit_biography_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/chau_philomene_one"
                android:text="@string/biography_psi"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/purple"
                android:textSize="16sp"
                app:layout_goneMarginTop="16dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/edit_biography_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                android:layout_marginHorizontal="16dp"
                android:outlineAmbientShadowColor="@color/purple"
                android:outlineSpotShadowColor="@color/purple"
                android:layout_gravity="center"
                app:cardCornerRadius="8dp">

                <EditText
                    android:id="@+id/edit_biography_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="32dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@android:color/transparent"
                    android:maxLength="850"
                    android:gravity="center"
                    android:hint="@string/biography_hint"
                    android:textColor="@color/light_gray"
                    android:textColorHint="@color/light_gray" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/chau_philomene_one"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/purple"
                android:textSize="16sp"
                app:layout_goneMarginTop="16dp" />
            <androidx.cardview.widget.CardView
                android:id="@+id/edit_location_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                android:outlineAmbientShadowColor="@color/purple"
                android:outlineSpotShadowColor="@color/purple"
                android:layout_gravity="center"
                app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_cep_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:fontFamily="@font/chau_philomene_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/cep"
                android:inputType="text"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/purple"
                app:helperTextTextColor="@color/gray"
                app:hintTextColor="@color/purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_cep_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="8"
                    android:inputType="number"
                    android:textColor="@color/gray" />

                <com.example.numaboaterapia.views.CustomView.BotaoArredondadoRoxo
                    android:id="@+id/edit_cep_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp" />

            </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_city_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:fontFamily="@font/chau_philomene_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:paddingBottom="16dp"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/purple"
                    app:helperTextTextColor="@color/gray"
                    app:hintTextColor="@color/purple"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_cep_text_input_layout"
                    tools:visibility="visible"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_psi_city_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/gray" />

                </com.google.android.material.textfield.TextInputLayout>
                <CheckBox
                    android:id="@+id/edit_biopgraphy_in_person_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/light_gray"
                    android:gravity="center"
                    android:text="@string/in_person"
                    android:buttonTint="@color/light_purple"
                    app:layout_constraintTop_toBottomOf="@id/edit_cep_text_input_layout"/>

                <CheckBox
                    android:id="@+id/edit_biography_onine_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/light_purple"
                    android:text="@string/online"
                    android:textColor="@color/light_gray"
                    app:layout_constraintEnd_toEndOf="@id/edit_biopgraphy_in_person_checkbox"
                    app:layout_constraintStart_toStartOf="@id/edit_biopgraphy_in_person_checkbox"
                    app:layout_constraintTop_toBottomOf="@id/edit_biopgraphy_in_person_checkbox" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <com.example.numaboaterapia.views.CustomView.BotaoArredondadoRoxo
                android:id="@+id/edit_biography_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/edit_biography_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chau_philomene_one"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/cancel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


        </LinearLayout>


    </ScrollView>

</LinearLayout>